feat: add get alerts list
