# openapi.yaml
@@ -40,6 +40,53 @@ paths:
 
                     ...jpeg bytes
   /cv:
+    get:
+      description: CV 검출 목록을 가져옵니다
+      responses:
+        200:
+          description: 검출 목록 가져오기 결과
+          content:
+            application/json:
+              examples:
+                success:
+                  description: 검출 목록을 성공적으로 가져옴
+                  value:
+                    success: true
+                    alerts:
+                      - id: 1
+                        message: 쓰러짐 감지!!
+                        createdAt: 2023-05-05T04:28:16.552Z
+                      - id: 2
+                        message: 화재 감지!!
+                        createdAt: 2023-05-05T04:28:50.978Z
+              schema:
+                type: object
+                required:
+                  - success
+                  - alerts
+                properties:
+                  success:
+                    description: 검출 목록 가저오기 성공 유무
+                    type: boolean
+                  alerts:
+                    description: 가져온 검출 목록
+                    type: array
+                    items:
+                      type: object
+                      required:
+                        - id
+                        - message
+                        - createdAt
+                      properties:
+                        id:
+                          description: 알림 ID
+                          type: number
+                        message:
+                          description: 알림 내용
+                          type: string
+                        createdAt:
+                          description: 알림 생성 날짜
+                          type: string
     post:
       description: CV에서 위험이 발견되어 보호자에게 알림을 전송합니다.
       requestBody:
@@ -99,16 +146,16 @@ paths:
                   type: string
       responses:
         200:
-          description: 알람처리 후 알림 처리 결과
+          description: 알림 등록 결과
           content:
             application/json:
               examples:
                 success:
-                  description: 알림 처리 성공
+                  description: 알림 등록 성공
                   value: 
                     success: true
                 fail:
-                  description: 알림 처리 실패 혹은 message 필드 없음
+                  description: 알림 등록 실패 혹은 registrationToken 필드 없음
                   value:
                     success: false
               schema:
