# src/entities/Alert.ts
@@ -1,0 +1,7 @@
+interface Alert {
+  id: number
+  message: string
+  createdAt: Date
+}
+
+export default Alert
